--- a/modulo02/package.json
+++ b/modulo02/package.json
@@ -7,6 +7,12 @@
     "dev": "nodemon src/server.js"
   },
   "devDependencies": {
+    "eslint": "^6.3.0",
+    "eslint-config-airbnb-base": "^14.0.0",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-config-prettier": "^6.1.0",
+    "eslint-plugin-prettier": "^3.1.0",
+    "prettier": "^1.18.2",
     "nodemon": "^1.19.1",
     "sucrase": "^3.10.1"
   },
