--- a/modulo02/package.json
+++ b/modulo02/package.json
@@ -20,6 +20,7 @@
     "express": "^4.17.1",
     "pg": "^7.12.1",
     "pg-hstore": "^2.3.3",
-    "sequelize": "^5.18.0"
+    "sequelize": "^5.18.0",
+    "sequelize-cli": "^5.5.1"
   }
 }
